syntax = "proto3";

package api.dw.v2;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option go_package = "micros-api/api/dw/v2;dwV2";
option java_multiple_files = true;
option java_outer_classname = "DwV2";


service DwService {

  rpc GetEnterpriseIdent(GetEntIdentReq) returns (EntIdentResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/ident"
    };
  }

  rpc GetEnterpriseInfo(GetEntInfoReq) returns (EntStructResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/info"
    };
  }


  rpc GetEnterpriseCredential(GetEntInfoReq) returns (EntArrayResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/credential"
    };
  }

  rpc GetEnterpriseRankingList(GetEntInfoReq) returns (EntArrayResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/ranking-list"
    };
  }

  rpc GetEnterpriseIndustry(GetEntInfoReq) returns (EntStrArrayResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/industry"
    };
  }

  rpc GetEnterpriseProduct(GetEntInfoReq) returns (EntStrArrayResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/product"
    };
  }

  rpc GetEnterpriseEquityTransparency(GetEntInfoReq) returns(EquityTransparencyResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/equity-transparency"
    };
  }

  rpc GetEntShareholders(GetEntInfoReq) returns (ShareholdersResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/shareholders"
    };
  }

  rpc GetEntInvestment(GetEntInfoReq) returns (InvestmentResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/investments"
    };
  }

  rpc GetEntBranches(GetEntInfoReq) returns (BranchesResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/branches"
    };
  }

  rpc GetEntRelations(GetEntInfoReq) returns (EnterpriseRelations) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/relations"
    };
  }

  rpc GetForeclosureDisposition(GetEntInfoWithTime) returns (EntStructResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/judiciary/foreclosure-disposition"
    };
  }

  rpc GetExecutive(GetEntInfoWithTime) returns (EntStructResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/judiciary/executive"
    };
  }

  rpc GetEquityFrozen(GetEntInfoWithTime) returns (EntStructResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/judiciary/equity-frozen"
    };
  }

  rpc GetHighConsumptionRestriction(GetEntInfoWithTime) returns (EntStructResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/judiciary/high-consumption-restriction"
    };
  }

  rpc GetJudicialStatics(GetEntInfoWithTime) returns (EntStructResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/judiciary/stat"
    };
  }

  rpc GetCourtAnnouncement(GetEntInfoWithTime) returns (EntStructResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/judiciary/court-announcement"
    };
  }

  rpc GetDiscreditedDebtor(GetEntInfoWithTime) returns (EntStructResp) {
    option (google.api.http) = {
      get: "/micros/dw/v2/enterprise/judiciary/discredited-debtor"
    };
  }

}

message GetEntInfoWithTime {
  string usc_id = 1;
  google.protobuf.Timestamp time_point = 2;
}


message EnterpriseRelations {
  message RelationsData {
    string enterprise_name = 1;
    repeated Shareholders shareholder = 2;
    repeated Investment investment = 3;
    repeated Branches branch = 4;
  }
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  RelationsData data = 4;
}

message Shareholders {
  string shareholder_name = 1;
  string shareholder_type = 2;
  string capital_amount = 3;
  string real_amount = 4;
  string capital_type = 5;
  string percent = 6;
}
message ShareholdersResp {
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  bool found = 4;
  repeated Shareholders data = 5;
}

message Investment {
  string enterprise_name = 1;
  string operator = 2;
  string shareholding_ratio = 3;
  string invested_amount = 4;
  string start_date = 5;
  string status = 6;
}
message InvestmentResp {
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  bool found = 4;
  repeated Investment data = 5;
}


message Branches {
  string enterprise_name = 1;
  string operator = 2;
  string area = 3;
  string start_date = 4;
  string status = 5;
}
message BranchesResp {
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  bool found = 4;
  repeated Branches data = 5;
}

message EquityTransparencyResp {
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  EquityTransparency data = 4;
}

message EquityTransparency {
  string conclusion = 1;
  string name = 2;
  repeated google.protobuf.Struct shareholder = 3;
  string key_no = 4;
}


message GetEntIdentReq {
  string enterprise_name = 1;
}

message EntIdentResp {
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  string usc_id = 4;
}

message GetEntInfoReq {
  string usc_id = 1;
}

message EntStructResp {
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  google.protobuf.Struct data = 4;
}

message EntArrayResp {
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  repeated google.protobuf.Struct data = 4;
}

message EntStrArrayResp {
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  repeated string data = 4;
}